# Bookstore2

./: .gitignore  Dockerfile  README.md  docker-nginx.txt  docker.txt  manage.py  poetry.txt  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py  0002_alter_order_user.py  0003_alter_order_user.py  0004_alter_order_user.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_category.py  0004_alter_product_category.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_models/: test_category_model.py  test_product_model.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
